demos/ip-viewer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-viewer
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ip-viewer
  template:
    metadata:
      labels:
        app: ip-viewer
    spec:
      containers:
        - name: ip-viewer
          image: soominchae/ip-viewer:latest
          ports:
            - containerPort: 5000
