demos/ip-viewer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-viewer-service
  namespace: ip-viewer
spec:
  type: ClusterIP
  selector:
    app: ip-viewer
  ports:
    - port: 80
      targetPort: 5000
